--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "angular-bootstrap": "~0.11.0",
     "firebase": "~1.0.19",
     "angularfire": "~0.8.0",
-    "angular-mocks": "~1.2.21"
+    "angular-mocks": "~1.2.21",
+    "ui-router": "~0.2.11"
   }
 }
